Add type for the optional input linter action

--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -6,6 +6,7 @@ on:
       regex_exclude:
         description: 'Regex to exclude files from linting'
         required: false
+        type: string
         default: ''
     secrets:
       PAT:
