--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -35,6 +35,9 @@ on:
         required: true
 jobs:
   rebuild_docker:
+    strategy:
+      matrix:
+        stage: [dev_stage, prod_stage]
     runs-on: self-hosted
     steps:
     - name: Check Out Current Repo 
@@ -51,7 +54,7 @@ jobs:
         context: ../
         file: ${{ inputs.file }}
         arch: ${{ inputs.arch }}
-        stage: ${{ inputs.stage }}
+        stage: ${{ matrix.stage }}
         push: ${{ inputs.push }}
         build_args: ${{ inputs.build_args }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
