add arm64 support on PR

--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -35,7 +35,7 @@ on:
         required: true
 jobs:
   rebuild_docker:
-    runs-on: self-hosted
+    runs-on: [self-hosted, "${{ inputs.arch }}"]
     steps:
     - name: Check Out Current Repo 
       uses: actions/checkout@v4
