--- a/.github/workflows/rebuild_docker_dep.yaml
+++ b/.github/workflows/rebuild_docker_dep.yaml
@@ -29,7 +29,7 @@ on:
         required: true
 jobs:
   rebuild_docker:
-    runs-on: self-hosted
+    runs-on: [self-hosted, amd64]
     steps:
     - name: Check Out Repo 
       uses: actions/checkout@v4
