--- a/push-pr-docker-action/action.yaml
+++ b/push-pr-docker-action/action.yaml
@@ -56,4 +56,4 @@ runs:
         build-args: ${{ inputs.build_args }}
         push: ${{ steps.get_docker_info.outputs.push }}
         tags: ${{ inputs.dockerhub_username }}/${{ steps.get_docker_info.outputs.image_name }}:${{ steps.get_docker_info.outputs.tag_name }}-${{ inputs.arch }}
-        cache-from: type=registry,ref=${{ inputs.dockerhub_username }}/${{ steps.get_docker_info.outputs.image_name }}:buildcache
+        cache-from: type=registry,ref=${{ inputs.dockerhub_username }}/${{ steps.get_docker_info.outputs.image_name }}:buildcache-${{ inputs.arch }}
