--- a/.github/workflows/rebuild_docker.yaml
+++ b/.github/workflows/rebuild_docker.yaml
@@ -53,6 +53,6 @@ jobs:
         arch: ${{ inputs.arch }}
         stage: ${{ inputs.stage }}
         push: ${{ inputs.push }}
-        build_args: ${{ inputs.build_args }}
+        build_args: ARCH=${{ inputs.arch }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
