--- a/.github/workflows/rebuild_docker_dep.yaml
+++ b/.github/workflows/rebuild_docker_dep.yaml
@@ -68,5 +68,6 @@ jobs:
         arch: ${{ inputs.arch }}
         stage: ${{ inputs.stage }}
         push: ${{ inputs.push }}
+        build_args: ARCH=${{ inputs.arch }}
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
