Fix typo on build-args param

--- a/.github/workflows/tag_and_push_docker.yaml
+++ b/.github/workflows/tag_and_push_docker.yaml
@@ -71,7 +71,7 @@ jobs:
         platforms: linux/${{ inputs.arch }}
         push: true
         target: dev_stage
-        build_args: ARCH=${{ inputs.arch }}
+        build-args: ARCH=${{ inputs.arch }}
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-dev:${{ steps.autoversion.outputs.new_tag }}-${{ inputs.arch }} , ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-dev:latest-${{ inputs.arch }}
         cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-dev:buildcache-${{ inputs.arch }}
         cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-dev:buildcache-${{ inputs.arch }},mode=max
@@ -86,7 +86,7 @@ jobs:
         platforms: linux/${{ inputs.arch }}
         push: true
         target: prod_stage
-        build_args: ARCH=${{ inputs.arch }}
+        build-args: ARCH=${{ inputs.arch }}
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.autoversion.outputs.new_tag }}-${{ inputs.arch }} , ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest-${{ inputs.arch }}
         cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:buildcache-${{ inputs.arch }}
         cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:buildcache-${{ inputs.arch }},mode=max
