--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -29,15 +29,19 @@ jobs:
     - name: Attach clang-format
       run: |
         cp umd_workflows/.clang-format .
+        cp umd_workflows/run-clang-format.py /
         rm -rf umd_workflows
 
-    - uses: DoozyX/clang-format-lint-action@v0.16
-      with:
-        source: '.'
-        extensions: 'h,c,cpp,hpp'
-        clangFormatVersion: 14
-        inplace: True
-      continue-on-error: true
+    # - uses: DoozyX/clang-format-lint-action@v0.16
+    #   with:
+    #     source: '.'
+    #     extensions: 'h,c,cpp,hpp'
+    #     clangFormatVersion: 14
+    #     inplace: True
+    #   continue-on-error: true
+    - name: Clang Format Lint
+      run: |
+        /run-clang-format.py --clang-format-executable /usr/bin/clang-format -r --color always --style 'file' --inplace True --extensions 'h,c,cpp,hpp' --exclude ${{ inputs.regex_exclude }} '.'
 
     - uses: EndBug/add-and-commit@v9.1.3
       with:
