--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -24,6 +24,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         repository: umdlife/umd_workflows
+        ref: feat/manual-clang-format
         path: umd_workflows
     
     - name: Attach clang-format
