--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Attach clang-format
       run: |
         cp umd_workflows/.clang-format .
-        cp umd_workflows/run-clang-format.py ../
+        cp umd_workflows/run-clang-format.py .
         rm -rf umd_workflows
 
     # - uses: DoozyX/clang-format-lint-action@v0.16
@@ -42,7 +42,8 @@ jobs:
     #   continue-on-error: true
     - name: Clang Format Lint
       run: |
-        ../run-clang-format.py --clang-format-executable /usr/bin/clang-format -r --color always --style 'file' --inplace True --extensions 'h,c,cpp,hpp' --exclude ${{ inputs.regex_exclude }} '.'
+        ./run-clang-format.py --clang-format-executable /usr/bin/clang-format -r --color always --style 'file' --inplace True --extensions 'h,c,cpp,hpp' --exclude ${{ inputs.regex_exclude }} '.'
+        rm run-clang-format.py
 
     - uses: EndBug/add-and-commit@v9.1.3
       with:
