--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -43,7 +43,7 @@ jobs:
     - name: Clang Format Lint
       run: |
         sudo apt update
-        sudo apt install clang-format
+        sudo apt install -y clang-format
         python3 run-clang-format.py --clang-format-executable /usr/bin/clang-format -r --color always --style 'file' --inplace True --extensions 'h,c,cpp,hpp' --exclude ${{ inputs.regex_exclude }} '.'
         rm run-clang-format.py
 
