--- a/.github/workflows/clang_format_lint.yaml
+++ b/.github/workflows/clang_format_lint.yaml
@@ -44,7 +44,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y clang-format
-        python3 run-clang-format.py --clang-format-executable /usr/bin/clang-format -r --color always --style 'file' --inplace True --extensions 'h,c,cpp,hpp' --exclude ${{ inputs.regex_exclude }} '.'
+        python3 run-clang-format.py --clang-format-executable /usr/bin/clang-format -r --color always --style 'file' --inplace True --extensions 'h,c,cpp,hpp' '.'
         rm run-clang-format.py
 
     - uses: EndBug/add-and-commit@v9.1.3
