--- a/.github/workflows/bump_and_release.yaml
+++ b/.github/workflows/bump_and_release.yaml
@@ -28,7 +28,8 @@ jobs:
           fi
 
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.67.0
+        # uses: anothrNick/github-tag-action@1.67.0
+        uses: umdlife/umd_workflows/bump-action@feat/manual-bump
         id: autoversion
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
