--- a/.github/workflows/tag_and_push_docker.yaml
+++ b/.github/workflows/tag_and_push_docker.yaml
@@ -45,7 +45,8 @@ jobs:
         fi
 
     - name: Bump version
-      uses: anothrNick/github-tag-action@1.67.0
+      # uses: anothrNick/github-tag-action@1.67.0
+      uses: umdlife/umd_workflows/bump-action@feat/manual-bump
       id: autoversion
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
