--- a/.github/workflows/bump_and_release.yaml
+++ b/.github/workflows/bump_and_release.yaml
@@ -26,6 +26,7 @@ jobs:
           elif [[ ${{ github.ref_name }} == "dev" ]]; then
             echo "BUMP=patch" >> $GITHUB_ENV
           fi
+          npm install semver
 
       - name: Bump version and push tag
         # uses: anothrNick/github-tag-action@1.67.0
