--- a/.github/workflows/bump_and_release.yaml
+++ b/.github/workflows/bump_and_release.yaml
@@ -31,7 +31,7 @@ jobs:
           npm install semver
 
       - name: Bump version and push tag
-        uses: umdlife/umd_workflows/bump-action@feat/manual-bump
+        uses: umdlife/umd_workflows/bump-action@main
         id: autoversion
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
