--- a/push-pr-docker-action/action.yaml
+++ b/push-pr-docker-action/action.yaml
@@ -29,6 +29,10 @@ inputs:
     description: 'Build arguments'
     required: false
     default: ''
+  secrets:
+    description: 'Docker secrets'
+    required: false
+    default: ''
 runs:
   using: "composite"
   steps:
@@ -47,13 +51,14 @@ runs:
         token: ${{ inputs.dockerhub_token }}
 
     - name: Build and Push image
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@5
       with:
         context: ${{ inputs.context }}
         file: ${{ inputs.file }}
         platforms: linux/${{ inputs.arch }}
         target: ${{ inputs.stage }}
         build-args: ${{ inputs.build_args }}
+        secrets: ${{ inputs.secrets }}
         push: ${{ steps.get_docker_info.outputs.push }}
         tags: ${{ inputs.dockerhub_username }}/${{ steps.get_docker_info.outputs.image_name }}:${{ steps.get_docker_info.outputs.tag_name }}-${{ inputs.arch }}
         cache-from: type=registry,ref=${{ inputs.dockerhub_username }}/${{ steps.get_docker_info.outputs.image_name }}:buildcache-${{ inputs.arch }}
