--- a/push-pr-docker-action/action.yaml
+++ b/push-pr-docker-action/action.yaml
@@ -51,7 +51,7 @@ runs:
         token: ${{ inputs.dockerhub_token }}
 
     - name: Build and Push image
-      uses: docker/build-push-action@5
+      uses: docker/build-push-action@v5
       with:
         context: ${{ inputs.context }}
         file: ${{ inputs.file }}
