--- a/.github/workflows/label_pr.yaml
+++ b/.github/workflows/label_pr.yaml
@@ -2,15 +2,14 @@ name: Label PR
 on:
   workflow_call:
     secrets:
-      PAT: 
+      PAT:
         required: true
 jobs:
   label_pr:
     runs-on: self-hosted
     steps:
-    - name: PR Labeler
-      uses: umdlife/umd_workflows/pr-labeler-action@main
-      with:
-          configuration-path: umd_workflows/.github/pr-labeler.yml
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}
+      - name: Labeler
+        uses: actions/labeler@v5.0.0
+        with:
+          repo-token: ${{ secrets.PAT }}
+          configuration-path: .github/labeler.yml
